Fixed block gap/gapless SCSS discrepancy.

--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -302,9 +302,9 @@
 @mixin no-results-block() {
   align-items: center;
   background-color: rgba(255, 255, 255, 0.075);
-  border: var(--teriock-block-outer-border-width) solid var(--color-block-container-border);
+  border: var(--teriock-block-outer-border-width) solid var(--teriock-block-border-color);
   border-radius: var(--teriock-block-outer-border-radius);
-  border-top-width: var(--teriock-block-inner-border-width);
+  border-top: var(--teriock-block-inner-border-width) solid var(--color-block-container-border);
   box-shadow: var(--teriock-block-box-shadow);
 }
 
