--- a/src/style/ui/_block.scss
+++ b/src/style/ui/_block.scss
@@ -39,9 +39,9 @@
 @mixin teriock-block-base {
   align-items: center;
   background-color: var(--color-block-display-background);
-  border: var(--teriock-block-outer-border-width) solid var(--color-block-container-border);
+  border: var(--teriock-block-outer-border-width) solid var(--teriock-block-border-color);
   border-radius: var(--teriock-block-border-radius);
-  border-top-width: var(--teriock-block-inner-border-width);
+  border-top: var(--teriock-block-inner-border-width) solid var(--color-block-container-border);
   box-shadow: var(--teriock-block-box-shadow);
   cursor: default;
   display: flex;
@@ -275,9 +275,7 @@
     --teriock-block-border-radius: 0;
     --teriock-block-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
     --teriock-block-container-box-shadow: 0 0 6px var(--color-block-shadow);
-    --teriock-block-image-margin-left: 6px;
-    --teriock-block-outer-border-width: 0;
-    border-top-width: 0;
+    --teriock-block-border-color: transparent;
     gap: 0;
     overflow: hidden;
     position: relative;
